--- a/core/home.html
+++ b/core/home.html
@@ -6,7 +6,7 @@ title: Home
 description: Home template
 ---
 <!DOCTYPE html>
-<html class="_core_layout no_js" lang="en-US">
+<html class="no_js _core_layout" lang="{{ page.lang | default: site.lang | default: 'en-US' }}">
 <!-- path        : {{ page.path }} -->
 <!-- layout      : {{ page.layout }} -->
 <!-- source      : _source/_layouts/core.pug -->
@@ -20,7 +20,7 @@ description: Home template
     <meta id="_theme_color" name="theme-color" content="{{ page.theme_color | default: site.theme_color | default: '' }}"/>
     <meta id="_color_scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}"/>
     <style>.isvg svg { width:1em;height:1em }</style>
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/core/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+    <link id="_style" rel="stylesheet" href="{{ site.baseurl }}/assets/core/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
     <style>
       #hero_block { padding:1rem 2rem }
       #hero_block h1 { margin-top:1rem }
@@ -50,10 +50,10 @@ description: Home template
           </header>
           <nav class="_nav">
             <div class="_layout _nav_layout">
-              <div class="mv"><a href="/dove/core/samples">Samples</a><i class="icon"><i class="isvg">
+              <div class="mv"><a href="{{ site.baseurl }}/core/samples">Samples</a><i class="icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><b>Html</b><i class="icon"><i class="itext">:</i></i><b>Home</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/404">404</a>
+                    </svg></i></i><b>Html</b><i class="icon"><i class="itext">:</i></i><b>Home</b><i class="icon"><i class="itext">&bull;</i></i><a href="{{ site.baseurl }}/core/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="{{ site.baseurl }}/core/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="{{ site.baseurl }}/core/404">404</a>
               </div>
               <hr class="thin"/>
             </div>
@@ -78,7 +78,7 @@ description: Home template
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/core/home.html.pug">Improve this page</a>.</small></p>
+                  <a href="{{ site.github.repository_url }}/edit/main/_source/core/home.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
