--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -6,7 +6,7 @@ title: Preview
 description: Theme preview.
 ---
 <!DOCTYPE html>
-<html class="_mallet_layout no_js" lang="en-US">
+<html class="no_js _mallet_layout" lang="{{ page.lang | default: site.lang | default: 'en-US' }}">
 <!-- path        : {{ page.path }} -->
 <!-- layout      : {{ page.layout }} -->
 <!-- source      : _source/_layouts/mallet.pug -->
@@ -20,7 +20,7 @@ description: Theme preview.
     <meta id="_theme_color" name="theme-color" content="{{ page.theme_color | default: site.theme_color | default: '' }}"/>
     <meta id="_color_scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}"/>
     <style>.isvg svg { width:1em;height:1em }</style>
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+    <link id="_style" rel="stylesheet" href="{{ site.baseurl }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -35,7 +35,7 @@ description: Theme preview.
           </header>
           <nav class="_nav">
             <div class="_layout _nav_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
+              <nav class="mv"><a href="{{ site.baseurl }}/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="{{ site.baseurl }}/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
             </div>
@@ -47,12 +47,12 @@ description: Theme preview.
           <footer class="_footer">
             <div class="_layout _footer_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
+              <nav class="_common_nav mv"><a href="{{ site.baseurl }}/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="{{ site.baseurl }}/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/preview.html.pug">Improve this page</a>.</small></p>
+                  <a href="{{ site.github.repository_url }}/edit/main/_source/mallet/preview.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
