--- a/prime/page.html
+++ b/prime/page.html
@@ -48,9 +48,11 @@ description: Page template.
             <div class="_layout _article_layout">
               <h1>Page title</h1>
               <p><code>// page content</code></p>
-              <div class="mt-6"></div>
-              <hr/>
-              <h2>Other pages</h2>{%- capture pages %}{%- include pages.md %}{%- endcapture %}{{ pages | markdownify }}
+              <aside>
+                <div class="mt-6"></div>
+                <hr/>
+                <h2>Other pages</h2>{%- capture pages %}{%- include pages.md %}{%- endcapture %}{{ pages | markdownify }}
+              </aside>
             </div>
           </article>
           <footer class="_footer">
